parslers-benchmark/src/tests/invalid/semanticErr/variables/basicTypeErr10.wacc
# type mismatch: string <- int

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  string s = 128
end
